feat(e2-regression): add comprehensive end-to-end regression tests for application lifecycle
- Implemented E2 regression tests covering various scenarios including university references, candidate notifications, internship creation, document access controls, and error handling.
- Ensured that the tests validate the expected behavior of the application and its components during the full lifecycle.

fix(finance): enforce certificate generation as a prerequisite for finance cases

- Updated finance-related tests to ensure that a generated certificate is required before opening any finance case.
- Adjusted existing test cases to include certificate generation logic, ensuring compliance with business rules.

test(internship): enhance internship classification tests with academic level hints

- Added tests to validate the behavior of the internship classification service when handling final-year academic levels.
- Included scenarios for invalid combinations and edge cases to ensure robustness.

refactor(performance): optimize application seeding in performance tests

- Refactored application seeding logic to streamline the creation of multiple candidate applications, improving test clarity and maintainability.

chore(reporting): update report controller tests to reflect candidate application changes

- Modified report controller tests to accommodate changes in candidate application handling, ensuring accurate reporting of application statuses.